# python-openstackclient

./: .coveragerc  .git-blame-ignore-revs  .git-ignore-blame-revs  .gitignore  .gitreview  .mailmap  .pre-commit-config.yaml  .stestr.conf  .testr.conf  .zuul.yaml  AUTHORS  CONTRIBUTING.rst  Dockerfile  HACKING  HACKING.rst  MANIFEST.in  README.rst  bindep.txt  lower-constraints.txt  openstack-common.conf  post_test_hook.sh  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/ext/: apidoc.py
doc/source/: authentication.rst  backwards-incompatible.rst  command-beta.rst  command-errors.rst  command-list.rst  command-options.rst  command-wrappers.rst  commands.rst  conf.py  configuration.rst  decoder.rst  developing.rst  humaninterfaceguide.rst  index.rst  interactive.rst  plugin-commands.rst  plugins.rst  releases.rst
doc/source/_extra/: .htaccess
doc/source/cli/: authentication.rst  backwards-incompatible.rst  command-list.rst  commands.rst  index.rst  plugin-commands.rst
doc/source/command-objects/: access-token.rst  account.rst  address-scope.rst  aggregate.rst  availability-zone.rst  backup.rst  catalog.rst  command.rst  complete.rst  compute-agent.rst  compute-service.rst  configuration.rst  consistency-group-snapshot.rst  consistency-group.rst  console-log.rst  console-url.rst  consumer.rst  container.rst  credential.rst  credentials.rst  domain.rst  ec2-credentials.rst  endpoint.rst  extension.rst  federation-protocol.rst  flavor.rst  floating-ip-pool.rst  floating-ip.rst  floatingip.rst  group.rst  host.rst  hypervisor-stats.rst  (+62 more)
doc/test/: redirect-tests.txt
docs/: Makefile
docs/source/: conf.py  index.rst
examples/: common.py  object_api.py  openstack.sh  osc-lib.py
functional/: harpoon.sh  harpoonrc
functional/common/: exceptions.py  test.py
functional/tests/: test_examples.py  test_identity.py  test_object.py
hacking/: checks.py
openstackclient/: __init__.py  command.py  i18n.py  shell.py  utils.py.dt
openstackclient/api/: api.py  auth.py  auth_plugin.py  compute_v2.py  image_v1.py  image_v2.py  network_v2.py  object_store_v1.py  utils.py  volume_v2.py  volume_v3.py
openstackclient/common/: availability_zone.py  client_config.py  clientmanager.py  command.py  commandmanager.py  configuration.py  context.py  envvars.py  exceptions.py  extension.py  limits.py  logs.py  module.py  openstackkeyring.py  pagination.py  parseractions.py  progressbar.py  project_cleanup.py  project_purge.py  quota.py  restapi.py  session.py  timing.py  utils.py  versions.py
openstackclient/compute/: client.py
openstackclient/identity/: client.py  common.py
openstackclient/image/: client.py
openstackclient/locale/: openstackclient.pot
openstackclient/network/: client.py  common.py  sdk_utils.py  utils.py
openstackclient/object/: client.py
openstackclient/share/: client.py  utils.py
openstackclient/tests/: fakes.py  test_shell.py  test_shell_integ.py  utils.py
openstackclient/volume/: client.py
playbooks/osc-devstack/: post.yaml  pre.yaml  run.yaml
playbooks/osc-functional-devstack/: run.yaml
playbooks/osc-functional-devstack-n-net/: run.yaml
playbooks/osc-functional-devstack-tips/: run.yaml
python-openstackclient/locale/: python-openstackclient.pot
releasenotes/notes/: Add-default-security-group-rule-CRUD-2916568f829ea38c.yaml  Add-trusted-vif-to-the-port-0a0c76d9da8f3da0.yaml  L3-conntrack-helper-bd0d9da041747e84.yaml  Move-Dynamic-Routing-CLI-to-OSC-98b3dbd6285810b6.yaml  Move-bgpvpn-CLI-to-OSC-4df0140af2b40577.yaml  Move-vpnaas-CLI-to-OSC-901b711d619e813e.yaml  Router-flavor-accepts-name-or-id-e9cecafcddf81cb2.yaml  add-auto-and-none-as-nic-parameter-ed23a6e7f99f250d.yaml  add-auto-approve-cleanup-a2d225faa42dfdcb.yaml  add-backup-option-to-create-vol-fc36c2c745ebcff5.yaml  add-baremetal-agent-type-7c46365e8d457ac8.yaml  add-block-storage-cluster-commands-fae8f686582bbbcf.yaml  add-block-storage-manage-commands-6ebf029bd7a67bb3.yaml  add-cache-commands-a6f046348a3a0b1f.yaml  add-chunk-size-to-image-save-37871f9e62693264.yaml  add-cluster-option-to-volume-migration-9fe0cc84e9c80a4c.yaml  add-cluster-to-service-list-5eab3e828de7547e.yaml  add-community-option-to-image-list-ac0651eb2e5d632f.yaml  add-create-group-from-src-options-6fcb0c87f617ca91.yaml  add-description-field-in-port-forwarding-c536e077b243d517.yaml  add-description-to-role-afe7b6ff668df261.yaml  add-device_id-to-port-list-0c658db51ce43c9e.yaml  add-direction-to-network-qos-bw-limit-rule-a3c5b6892074d5ae.yaml  add-disable-reason-6e0f28459a09a60d.yaml  add-dns-nameserver-overwrite-option-b866baeae12f9460.yaml  add-external-options-7a66219d263bb1e5.yaml  add-fip-portforwarding-commands-6e4d8ace698ee308.yaml  add-flavor-id-to-router-create-76e916e129b5b80c.yaml  add-ha-chassis-priority-to-add-router-to-agent-27c0a79d899a425c.yaml  add-ha-to-router-update-6a38a73cc112b2fc.yaml  add-host-and-hypervisor-hostname-flag-to-create-server-cb8b39a9f9311d42.yaml  add-image-import-flag-899869dc5a92aea7.yaml  add-image-member-get-25e913ef2b861bf3.yaml  add-image-member-list-1630ead5988348c2.yaml  add-image-metadef-namespace-object-delete-b6b2de24fc66e602.yaml  add-image-metadef-namespace-support-4ba37ec3a1a72185.yaml  add-image-metadef-object-property-show-4ab2c957451ea230.yaml  add-image-metadef-object-update-f4880e423bf4faba.yaml  add-image-metadef-property-delete-1e1bb8410130d901.yaml  add-image-metadef-resource-type-association-commands-4d373d7d8eca5d55.yaml  (+721 more)
releasenotes/source/: 20_releases.rst  conf.py  index.rst  newton.rst  pre_20_releases.rst  previous_releases.rst  unreleased.rst
tests/: __init__.py  test_clientmanager.py  test_clientmanager_clientcache.py  test_shell.py  test_utils.py  utils.py
tests/common/: test_commandmanager.py  test_parseractions.py
tests/compute/: test_compute.py
tests/identity/: test_identity.py
tests/image/: test_image.py
tests/volume/: test_volume.py
tools/: install_venv.py  install_venv_common.py  pip-requires  test-requires  tox_install.sh  with_venv.sh
(+962 files in other folders)
